--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Grantly",
-  "name": "Grantly",
+  "short_name": "foundergrants",
+  "name": "foundergrants",
   "icons": [
     {
       "src": "favicon.ico",
